samples/_failures_safe/1761785545_24c37b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46e5d15d.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_46e5d15d.c:167:5: error: expected expression at end of input
  167 |     if (
      |     ^~
./samples/SAFE/__tmp_46e5d15d.c:167:5: error: expected declaration or statement at end of input
